--- a/app/globals.css
+++ b/app/globals.css
@@ -123,4 +123,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  main {
+    @apply max-w-[1400px] mx-auto p-4 flex flex-col gap-4;
+  }
+  h1 {
+    @apply text-3xl sm:text-3xl md:text-4xl lg:text-6xl xl:text-7xl font-semibold;
+  }
 }
