--- a/app/globals.css
+++ b/app/globals.css
@@ -120,13 +120,78 @@
   * {
     @apply border-border outline-ring/50 font-sans antialiased;
   }
+  *::-webkit-scrollbar {
+    @apply hidden;
+  }
   body {
     @apply bg-background text-foreground;
   }
   main {
-    @apply max-w-[1400px] mx-auto p-4 flex flex-col gap-4;
+    @apply max-w-[1400px] mx-auto px-2 sm:px-4 py-4 flex flex-col gap-4;
   }
   h1 {
     @apply text-3xl sm:text-3xl md:text-4xl lg:text-6xl xl:text-7xl font-semibold;
+  }
+}
+
+@layer components {
+  .docs-section {
+    @apply py-4 grid grid-cols-1 xl:grid-cols-7 gap-6 w-full overflow-auto;
+  }
+  .docs-section > article {
+    @apply col-span-5 flex flex-col gap-4;
+
+    & h1 {
+      @apply text-3xl sm:text-4xl font-semibold mt-4;
+    }
+
+    & h2 {
+      @apply text-2xl sm:text-3xl font-semibold;
+    }
+
+    & h3 {
+      @apply text-xl sm:text-2xl font-semibold;
+    }
+
+    & h4 {
+      @apply text-lg sm:text-xl font-semibold;
+    }
+
+    & p {
+      @apply text-base sm:text-lg text-muted-foreground mb-12;
+
+      & span {
+        @apply font-medium text-aqyre-primary;
+      }
+    }
+
+    & ul {
+      @apply py-4 list-inside list-disc -space-y-6;
+
+      & h4 {
+        @apply inline;
+      }
+
+      & p {
+        @apply w-fit;
+      }
+    }
+
+    & a {
+      @apply text-aqyre-primary duration-200 hover:text-aqyre-primary/70;
+    }
+  }
+  .docs-section > aside {
+    @apply col-span-2 px-6 max-xl:hidden w-full;
+
+    & section {
+      @apply h-60 px-6 fixed top-24;
+    }
+  }
+}
+
+@layer utilities {
+  ::-webkit-scrollbar {
+    @apply hidden;
   }
 }
